2007-08-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailFolderActions.m ([UIxMailFolderActions
	-quotasAction]): invoke "relativeImap4Name" instead of
	"nameInContainer" since the latter also returns the "folder"
	prefix.

	* UI/MailerUI/UIxMailAccountActions.m ([UIxMailAccountActions
	-listMailboxesAction]): declare the output as text/plain in UTF-8.

	* UI/MailerUI/UIxMailFolderActions.m ([UIxMailFolderActions
	-deleteFolderAction]): fixed the url of the destination folder.

	* Main/SOGo.m ([SOGo +initialize]): show the build date and
	hostname at startup.

2007-08-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent
	-sendEMailUsingTemplateNamed:_pageNameforOldObject:_oldObjectandNewObject:_newObjecttoAttendees:_attendees]):
	set the mail date to the current date string returned by our
	rfc822DateString extension method.

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-_gcsFoldersFromFolder:): ignore the personal folders who are
	returned but don't really exist.

2007-08-02  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView _responseForResults:]):
	has to return only one element.

2007-08-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartViewer.m ([UIxMailPartViewer
	-content]): new method returning the decoded content of the
	corresponding attachment as an NSData instance.
	([UIxMailPartViewer -filename]): if the "filename" parameter of
	the metadata parameterList is empty, try to find out the filename
	from the "disposition" metadata returned with the BODYSTRUCTURE
	imap4 tag.

	* UI/MailerUI/UIxMailMainFrame.m ([UIxMailMainFrame
	-composeAction]): prefix the INBOX folder with "folder".

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailBaseObject
	-relativeImap4Name]): return nameInContainer stripped from its
	first 6 characters since all folder names are prefixed with